[tool.poetry]
name = "solve-leetcode"
version = "0.1.0"
description = ""
authors = ["Louis Brunet <louis.brunet@neoxia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    # "src/experimental",
    # "src/typestubs"
]
strict = ["src"]
pythonPath = ".venv/bin/python"
# ignore = ["src/oldstuff"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"

reportMissingImports = true
# reportMissingTypeStubs = false

# pythonVersion = "3.6"
# pythonPlatform = "Linux"
# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ] },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
